k8s/machine-learning-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machine-learning-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: machine-learning
  template:
    metadata:
      labels:
        component: machine-learning
    spec:
      containers:
        - name: machine-learning
          image: foxfurry/pbl-2020-python
          ports:
            - containerPort: 5000
