k8s/machine-learning-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: machine-learning-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: machine-learning
  ports:
    - port: 5000
      targetPort: 5000
