k8s/webpage-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpage-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: webpage
  ports:
    - port: 9000
      targetPort: 9000
